clang/test/BSC/Negative/Trait/trait_redefinition/trait-redefinition-non-template-then-template.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// Non-template trait followed by a template trait with the same name.

_Trait a{}; // expected-note {{previous definition is here}}
_Trait a<b>{}; // expected-error {{redefinition of 'a'}}
